--- a/orcamento-familiar/src/main/resources/application-prod.properties
+++ b/orcamento-familiar/src/main/resources/application-prod.properties
@@ -1,7 +1,7 @@
 spring.jpa.hibernate.ddl-auto= update
-spring.datasource.url =${PLANEJAMENTO_DATABASE_URL}
-spring.datasource.username=${PLANEJAMENTO_DATABASE_USERNAME}
-spring.datasource.password=${PLANEJAMENTO_DATABASE_PASSWORD}
+spring.datasource.url =mysql://b5646bf07890be:6dcfc3ea@us-cdbr-east-05.cleardb.net/heroku_c853df152e2a056?reconnect=true
+spring.datasource.username=b5646bf07890be
+spring.datasource.password=6dcfc3ea
 spring.datasource.driver-class-name= com.mysql.cj.jdbc.Driver
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
@@ -9,3 +9,5 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDial
 # jwt
 planejamento.jwt.secret=${PLANEJAMENTO_JWT_SECRET}
 planejamento.jwt.expiration=86400000
+
+server.port=${PORT}
