refactror! adiação de parametro Pageable nas port de listar receitas

--- a/orcamento-familiar/src/main/resources/application-prod.properties
+++ b/orcamento-familiar/src/main/resources/application-prod.properties
@@ -11,3 +11,5 @@ planejamento.jwt.secret=${PLANEJAMENTO_JWT_SECRET}
 planejamento.jwt.expiration=86400000
 
 server.port=${PORT}
+
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
